--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -15,8 +15,8 @@
         <div class="instagram-continue">
             <div class="group">
                 <img src="./instagram-logo1.png" class="instagram-logo" alt="instagram logo">    
-                <div class="profile-photo">
-                    <img src="./perfil-instagram.jpeg" alt="">
+                <div>
+                    <img src="./perfil-instagram.jpeg" class="profile-photo" alt="Foto de perfil">
                 </div>    
                 <a href="#" class="instagram-login">Continue como Viihvq</a>    
                 Não é Viihvq? <a href="#" class="instagram-logout">Trocar de conta</a>
