--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -14,12 +14,12 @@
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./instagram-logo1.png" class="instagram-logo" alt="instagram logo">    
+                <img src="./instagram-logo3.png" class="instagram-logo" alt="instagram logo">    
                 <div>
                     <img src="./perfil-instagram.jpeg" class="profile-photo" alt="Foto de perfil">
                 </div>    
                 <a href="#" class="instagram-login">Continue como Viihvq</a>    
-                Não é Viihvq? <a href="#" class="instagram-logout">Trocar de conta</a>
+                <p> Não é Viihvq? <a href="#" class="instagram-logout">Trocar de conta</a> </p>
             </div>
             <div class="group">
                 <p class="not-account">Não é Viihvq?</p>
