--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Instagram</title>
 </head>
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./instagram-celular.png" alt="celular">
+            <img src="./img/instagram-celular.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./instagram-logo3.png" class="instagram-logo" alt="instagram logo">    
+                <img src="./img/instagram-logo3.png" class="instagram-logo" alt="instagram logo">    
                 <div>
-                    <img src="./perfil-instagram.jpeg" class="profile-photo" alt="Foto de perfil">
+                    <img src="./img/perfil-instagram.jpeg" class="profile-photo" alt="Foto de perfil">
                 </div>    
                 <a href="#" class="instagram-login">Continue como Viihvq</a>    
                 <p> Não é Viihvq? <a href="#" class="instagram-logout">Trocar de conta</a> </p>
